--- a/templates/profile/edit.html.twig
+++ b/templates/profile/edit.html.twig
@@ -10,49 +10,31 @@
     {{ parent() }}
     {{ encore_entry_link_tags('css/profile') }}
     {{ encore_entry_link_tags('css/datepicker/datepicker') }}
-    <style>
-       
-    </style>
 {% endblock %}
 
 {% block body %}
     <div class="container">
+        {# modal window to update avatar #}
+        {% include 'partials/_modalUpdateAvatar.html.twig' %}
+        
+        {# modal window to confirm deletion of account #}
+        {% include 'partials/_modalDeleteProfile.html.twig' %}
+        
         <div class="d-flex justify-content-center pt-2">
             <div class="card card-profile">
-                <div class="card-header card-profile-header-avatar">
-                    <img src={% if user.avatar is empty %}"{{ asset('img/library/defaultAvatar.png') }}"{% else %} "{{ user.avatar }}" {% endif %}
-                    class="avatar" alt="Avatar de {{ user.pseudo }}">
-                </div>
-            </div>
-        </div>
-        <div class="modal fade" id="deleteProfileModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
-                    <div class="modal-header">
-                      <h5 class="modal-title" id="modalLabel">{{ 'modal.title.account_delete'|trans }}</h5>
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
-                    </div>
-                    <div class="modal-body">
-                        <p><strong>{{ 'modal.account.message_delete1'|trans }}</strong> {{ 'modal.account.message_delete2'|trans }}</p>
-                        <p><strong>{{ user.pseudo }}</strong>, {{ 'modal.account.message_delete3'|trans }}</p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-profile-update btn-sm" data-dismiss="modal">
-                            <i class="far fa-window-close"></i>  {{ 'btn.cancel'|trans }}
-                        </button>
-                        <form action="{{ url('delete_profile', {id: user.id}) }}" method="post" id="delete-form">
-                            <input type="hidden" name="token" value="{{ csrf_token('delete') }}" />
-                            <button type="submit" class="btn btn-confirm-profile-delete btn-sm">
-                                <i class="far fa-trash-alt"></i>  {{ 'profile.btn_delete'|trans }}
-                            </button>
-                        </form>
+                <div class="card-header card-profile-header-avatar" data-toggle="modal" data-target="#avatarProfileModal">
+                    <div class="update-avatar">
+                        <img src={% if user.avatar is empty %}"{{ asset('img/library/defaultAvatar.png') }}"{% else %} "{{ user.avatar }}" {% endif %}
+                        class="avatar img-avatar" alt="Avatar de {{ user.pseudo }}" >
+                        <div class="icon-edit">
+                            <div class="update-icon-avatar"><i class="far fa-edit"></i></div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        
+
+        {# profile form #}
         {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
             <div class="d-flex justify-content-center pt-2">
                 <div class="card card-profile mt-2">
@@ -89,7 +71,7 @@
             </div>
             <div class="d-flex justify-content-center pt-2">
                 <button type="submit" class="btn btn-profile-update btn-sm mr-2"><i class="far fa-edit"></i>  {{ 'profile.btn_update'|trans }}</button>
-                <button type="button" class="btn btn-profile-delete btn-sm" data-toggle="modal" data-target="#deleteProfileModal" id="toto">
+                <button type="button" class="btn btn-profile-delete btn-sm" data-toggle="modal" data-target="#deleteProfileModal">
                     <i class="far fa-trash-alt"></i>  {{ 'profile.btn_delete'|trans }}
                 </button>
             </div>
@@ -107,7 +89,7 @@
     {% include 'partials/_datepickerManagement.html.twig' %}
     <script>
         $('#deleteProfileModal').on('hidden.bs.modal', function () {
-            $("input:first").focus()
+            var firstInput = $("input:first").focus()
         })
     </script>
 {% endblock %}
