work on button of modal for avatar

--- a/templates/partials/_modalUpdateAvatar.html.twig
+++ b/templates/partials/_modalUpdateAvatar.html.twig
@@ -12,9 +12,9 @@
                 alt="Avatar de {{ user.pseudo }}" id="imgModalAvatar">
             </div>
             <div class="modal-footer modal-avatar">
-                <button type="button" class="btn btn-modal-avatar btn-sm mr-2" id="btnChangeAvatar"><i class="fas fa-upload"></i> Change</button>
-                <button type="button" class="btn btn-modal-avatar btn-sm mr-2" id="btnDelAvatar"><i class="far fa-trash-alt"></i> Delete</button>
-                <button type="button" class="btn btn-modal-avatar btn-sm mr-auto" data-dismiss="modal">
+                <button type="button" class="btn btn-modal-avatar btn-sm mr-2 shadow-none" id="btnChangeAvatar"><i class="fas fa-upload"></i> Change</button>
+                <button type="button" class="btn btn-modal-avatar btn-sm mr-2 shadow-none" id="btnDelAvatar"><i class="far fa-trash-alt"></i> Delete</button>
+                <button type="button" class="btn btn-modal-avatar btn-sm mr-auto shadow-none" data-dismiss="modal">
                     <i class="fas fa-times"></i> Cancel
                 </button>
             </div>
