--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -40,7 +40,7 @@
             <li class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="accountDropdownLink">
                     <img src={% if app.user.avatar is empty %}"{{ asset('img/library/defaultAvatar.png') }}"{% else %} "{{ app.user.avatar }}" {% endif %}
-                    class="avatar avatar-mini" alt="Avatar de {{ app.user.pseudo }}">
+                    class="avatar avatar-mini" id="imgAvatarNav" alt="Avatar de {{ app.user.pseudo }}">
                     &nbsp;{{ app.user.pseudo }}
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="accountDropdownLink">
