--- a/templates/profile/edit.html.twig
+++ b/templates/profile/edit.html.twig
@@ -24,8 +24,15 @@
             <div class="card card-profile">
                 <div class="card-header card-profile-header-avatar" data-toggle="modal" data-target="#avatarProfileModal">
                     <div class="update-avatar">
-                        <img src={% if user.avatar is empty %}"{{ asset('img/library/defaultAvatar.png') }}"{% else %} "{{ user.avatar }}" {% endif %}
-                        class="avatar avatar-large img-avatar" id="imgAvatarProfile" alt="Avatar de {{ user.pseudo }}" >
+                        <img src=
+                            {% if user.avatar is empty %}
+                                "{{ asset('img/library/defaultAvatar.png') }}"
+                            {% elseif user.avatar starts with 'https:' %}
+                                "{{ user.avatar }}"
+                            {% else %}
+                                "{{ asset('uploads/avatars/' ~ user.avatar) }}"
+                            {% endif %}
+                            class="avatar avatar-large img-avatar" id="imgAvatarProfile" alt="Avatar de {{ user.pseudo }}" >
                         <div class="icon-edit">
                             <div class="update-icon-avatar"><i class="far fa-edit"></i></div>
                         </div>
@@ -90,7 +97,6 @@
     {# management of datepicker options #}
     {% include 'partials/_datepickerManagement.html.twig' %}
     <script>
-
         document.getElementById('btnDelAvatar').addEventListener('click', function() {
             // if delete image, replace it by default avatar image
             fileAvatar = "{{ asset('img/library/defaultAvatar.png') }}"
@@ -110,9 +116,6 @@
         fileInput.addEventListener("change", function(e) {
             // if file choosen
             fileAvatar = this.files[0];
-            file2 = e.target.files
-            console.log(fileAvatar)
-            console.log(file2)
             if (fileAvatar) {
                 const reader = new FileReader();
                 reader.addEventListener("load", function() {
@@ -126,30 +129,28 @@
             let imgModalAvatar = document.getElementById("imgModalAvatar").getAttribute('src')
             if (document.getElementById("imgAvatarProfile").getAttribute('src') != imgModalAvatar)
             {
-                console.log(fileAvatar['name'])
-                // Send new image by json to update
+                // Send new image by json to update - name of file = fileAvatar['name']
                 let inputUpdateAvatar = document.getElementById("input-update-avatar")
-                // let img = document.getElementById("imgAvatarProfile").getAttribute('src')
+
+                let form = new FormData();
+                form.append('token', inputUpdateAvatar.value)
+                form.append("image", fileAvatar)
+                
                 fetch(inputUpdateAvatar.getAttribute("data-ref"), {
                     method: "POST",
                     headers: {
                         "X-Request-With": "XMLHttpRequest",
-                        "Content-Type": "application/json"
+                        "enctype": "multipart/form-data",
                     },
-                    body: JSON.stringify({
-                        "token": inputUpdateAvatar.value,
-                        "newAvatar": fileAvatar
-                    })
-
+                        body: form
                 })
                 .then(function(response) {
                     // retrieve the response in json
                     return response.json()
                 })
                 .then (data => {
-                    console.log(data)
                     if(!data.success) {
-                        toastMsg("error", "votre image n'a pas pu être modifiée.Merci de rééesayer plus tard")
+                        toastMsg("error", data.error,"4000")
                     }
                     else {
                         // Replace image of avatar in profile form
@@ -157,7 +158,7 @@
                         document.getElementById("imgAvatarNav").setAttribute('src', imgModalAvatar)
                     }
                 })
-                .catch(e => toastMsg("error", "Une erreur est survenue lors de la modification de l'image.\n Merci de réessayer ultérieurement","4000"))
+                .catch(e => toastMsg("error", "Une erreur est survenue lors de la modification de l'image. Merci de réessayer ultérieurement","4000"))
             }
         })
 
