--- a/templates/profile/edit.html.twig
+++ b/templates/profile/edit.html.twig
@@ -97,25 +97,28 @@
     {# management of datepicker options #}
     {% include 'partials/_datepickerManagement.html.twig' %}
     <script>
+        delAvatar = false // flag if avatar is deleted
+        
         document.getElementById('btnDelAvatar').addEventListener('click', function() {
             // if delete image, replace it by default avatar image
-            fileAvatar = "{{ asset('img/library/defaultAvatar.png') }}"
-            document.getElementById("imgModalAvatar").setAttribute('src', fileAvatar)
+            document.getElementById("imgModalAvatar").setAttribute('src', "{{ asset('img/library/defaultAvatar.png') }}")
+            delAvatar = true
         })
 
         const fileInput = document.getElementById("uploadFile")
-
+        
         // if click on change button
         document.getElementById("btnChangeAvatar").addEventListener("click", function() {
             fileInput.click()
+            console.log("image = " + document.getElementById("imgModalAvatar").getAttribute('src'))
         })
-
          // if new image upload
          // *** manage upload new file *** 
         //const fileInput = document.getElementById("uploadFile")
         fileInput.addEventListener("change", function(e) {
-            // if file choosen
+            // if file choose
             fileAvatar = this.files[0];
+            console.log("Mon image est " + fileAvatar['name'])
             if (fileAvatar) {
                 const reader = new FileReader();
                 reader.addEventListener("load", function() {
@@ -129,15 +132,21 @@
             let imgModalAvatar = document.getElementById("imgModalAvatar").getAttribute('src')
             if (document.getElementById("imgAvatarProfile").getAttribute('src') != imgModalAvatar)
             {
-                // Send new image by json to update - name of file = fileAvatar['name']
-                let inputUpdateAvatar = document.getElementById("input-update-avatar")
-
+                let inputUpdateAvatar = document.getElementById("input-update-avatar") // token
                 let form = new FormData();
                 form.append('token', inputUpdateAvatar.value)
-                form.append("image", fileAvatar)
                 
+                if (delAvatar) {
+                    form.append('image', '{{ user.avatar }}')
+                    form.append('action', 'delete')
+                }
+                else {
+                    form.append('image', fileAvatar)
+                    form.append('action', 'update')
+                }
+                // Send new image by json to update - name of file = fileAvatar['name']
                 fetch(inputUpdateAvatar.getAttribute("data-ref"), {
-                    method: "POST",
+                    method: 'POST',
                     headers: {
                         "X-Request-With": "XMLHttpRequest",
                         "enctype": "multipart/form-data",
@@ -153,13 +162,22 @@
                         toastMsg("error", data.error,"4000")
                     }
                     else {
-                        // Replace image of avatar in profile form
-                        document.getElementById("imgAvatarProfile").setAttribute('src', imgModalAvatar)
-                        document.getElementById("imgAvatarNav").setAttribute('src', imgModalAvatar)
+                        if (delAvatar) {
+                            document.getElementById("imgAvatarProfile").setAttribute('src', "{{ asset('img/library/defaultAvatar.png') }}")
+                            document.getElementById("imgAvatarNav").setAttribute('src', "{{ asset('img/library/defaultAvatar.png') }}")
+                            document.getElementById("uploadFile").value=""
+                            delAvatar = false
+                        }
+                        else {
+                            // Replace image of avatar in profile form
+                            document.getElementById("imgAvatarProfile").setAttribute('src', imgModalAvatar)
+                            document.getElementById("imgAvatarNav").setAttribute('src', imgModalAvatar)
+                        }
                     }
                 })
                 .catch(e => toastMsg("error", "Une erreur est survenue lors de la modification de l'image. Merci de réessayer ultérieurement","4000"))
             }
+            else { console.log("l'image n'a pas été modifiée") }
         })
 
         $('#deleteProfileModal').on('hidden.bs.modal', function () {
