--- a/templates/profile/edit.html.twig
+++ b/templates/profile/edit.html.twig
@@ -96,29 +96,25 @@
     {% endif %}
     {# management of datepicker options #}
     {% include 'partials/_datepickerManagement.html.twig' %}
+    
     <script>
-        delAvatar = false // flag if avatar is deleted
-        
+        const fileInput = document.getElementById("uploadFile")
+
         document.getElementById('btnDelAvatar').addEventListener('click', function() {
             // if delete image, replace it by default avatar image
             document.getElementById("imgModalAvatar").setAttribute('src', "{{ asset('img/library/defaultAvatar.png') }}")
-            delAvatar = true
+            fileInput.value=""
         })
-
-        const fileInput = document.getElementById("uploadFile")
         
         // if click on change button
         document.getElementById("btnChangeAvatar").addEventListener("click", function() {
             fileInput.click()
-            console.log("image = " + document.getElementById("imgModalAvatar").getAttribute('src'))
         })
-         // if new image upload
+
          // *** manage upload new file *** 
-        //const fileInput = document.getElementById("uploadFile")
         fileInput.addEventListener("change", function(e) {
             // if file choose
             fileAvatar = this.files[0];
-            console.log("Mon image est " + fileAvatar['name'])
             if (fileAvatar) {
                 const reader = new FileReader();
                 reader.addEventListener("load", function() {
@@ -136,10 +132,12 @@
                 let form = new FormData();
                 form.append('token', inputUpdateAvatar.value)
                 
-                if (delAvatar) {
+                // if avatar deleted
+                if (fileInput.value === '') {
                     form.append('image', '{{ user.avatar }}')
                     form.append('action', 'delete')
                 }
+                // else change with new image
                 else {
                     form.append('image', fileAvatar)
                     form.append('action', 'update')
@@ -162,11 +160,9 @@
                         toastMsg("error", data.error,"4000")
                     }
                     else {
-                        if (delAvatar) {
+                        if (fileInput.value === '') {
                             document.getElementById("imgAvatarProfile").setAttribute('src', "{{ asset('img/library/defaultAvatar.png') }}")
                             document.getElementById("imgAvatarNav").setAttribute('src', "{{ asset('img/library/defaultAvatar.png') }}")
-                            document.getElementById("uploadFile").value=""
-                            delAvatar = false
                         }
                         else {
                             // Replace image of avatar in profile form
@@ -177,7 +173,6 @@
                 })
                 .catch(e => toastMsg("error", "Une erreur est survenue lors de la modification de l'image. Merci de réessayer ultérieurement","4000"))
             }
-            else { console.log("l'image n'a pas été modifiée") }
         })
 
         $('#deleteProfileModal').on('hidden.bs.modal', function () {
@@ -186,9 +181,9 @@
                $('html,body').animate({scrollTop: 0}, 200)
             })
         })
-
         // *** end manage upload new file ***
-        // Display error message
+        
+        // Display error message by toastr
         function toastMsg(criticity, message, timeout) {
             toastr.options = {
                 "closeButton": true,
