--- a/templates/partials/modals/_modalUpdateAvatar.html.twig
+++ b/templates/partials/modals/_modalUpdateAvatar.html.twig
@@ -2,23 +2,25 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header modal-avatar">
-              <h5 class="modal-title" id="modalLabel">Avatar de {{ user.pseudo }}</h5>
+              <h5 class="modal-title" id="modalLabel">{{ 'modal.title.modify_avatar'|trans }}</h5>
               <button type="button" class="close modal-close-avatar" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
             <div class="modal-body modal-avatar text-center">
                 {# the image is loaded on show.bs.modal #}
-                <img src= "" alt="Avatar de {{ user.pseudo }}" class="avatar" id="imgModalAvatar">
+                <img src= "" alt="{{ 'alt.avatar'|trans }} {{ user.pseudo }}" class="avatar" id="imgModalAvatar">
             </div>
             <div class="modal-footer modal-avatar">
                 <input type="file" id="uploadFile" accept="image/png, image/jpeg,image/jpg" hidden="hidden"/>
-                <button type="button" class="btn btn-modal-avatar btn-sm mr-2 shadow-none" id="btnChangeAvatar"><i class="fas fa-upload"></i> Change</button>
-                <button type="button" class="btn btn-modal-avatar btn-sm mr-2 shadow-none" id="btnDelAvatar"><i class="far fa-trash-alt"></i> Delete</button>
+                <button type="button" class="btn btn-modal-avatar btn-sm mr-2 shadow-none" id="btnChangeAvatar"><i class="fas fa-upload"></i>{{ 'btn.change'|trans }}</button>
+                <button type="button" class="btn btn-modal-avatar btn-sm mr-2 shadow-none" id="btnDelAvatar"><i class="far fa-trash-alt"></i> {{ 'btn.delete'|trans }}</button>
                 <button type="button" class="btn btn-modal-avatar btn-sm mr-auto shadow-none" data-dismiss="modal">
-                    <i class="fas fa-times"></i> Close
+                    <i class="fas fa-times"></i> {{ 'btn.close'|trans }}
                 </button>
-                <button type="button" class="btn btn-modal-avatar btn-sm mr-2 shadow-none" data-dismiss="modal" id="btnCancelAvatar"><i class="far fa-window-close"></i></i> Cancel</button>
+                <button type="button" class="btn btn-modal-avatar btn-sm mr-2 shadow-none" data-dismiss="modal" id="btnCancelAvatar">
+                    <i class="far fa-window-close"></i></i> {{ 'btn.cancel'|trans }}
+                </button>
             </div>
         </div>
     </div>
